compile use multi threads

--- a/builder/Dockerfile
+++ b/builder/Dockerfile
@@ -1,4 +1,6 @@
-FROM yangxuan8282/archlinuxarm-base
+FROM yangxuan8282/archlinuxarm:aarch64
+
+RUN pacman -Syu --noconfirm base-devel git
 
 RUN 	useradd -m -G wheel -s /bin/bash alarm \
 	&& echo "alarm:alarm" | chpasswd \
@@ -7,12 +9,12 @@ RUN 	useradd -m -G wheel -s /bin/bash alarm \
 
 RUN 	su alarm sh -c 'mkdir -p /home/alarm/work'
 
-RUN pacman -Syu --noconfirm base-devel git
-
 RUN pacman -Syu --noconfirm ccache \
   && sed -i 's|!ccache|ccache|' /etc/makepkg.conf \
   && export PATH="/usr/lib/ccache/bin/:$PATH" \
   && sed -i "s|COMPRESSXZ=(xz -c -z -)|COMPRESSXZ=(xz -c -z - --threads=$(nproc))|" /etc/makepkg.conf
+
+RUN sed -i "s/#MAKEFLAGS=\"-j2\"/MAKEFLAGS=\"-j$(nproc)\"/" /etc/makepkg.conf
 
 WORKDIR /home/alarm/work
 USER alarm
